--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-DB_URI=mongodb+srv://fred-2b:8578Mongo@cluster0.sjbzc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
+SECRET_DB="mongodb+srv://fred-2b:8578Mongo@cluster0.sjbzc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
